fix serializing null values in persisters from Persisters class